# TaskQ

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  release-please-config.json
.github/: CODEOWNERS  dependabot.yaml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  docs.yaml  publish.yml  release-please.yml
docs/: architecture.md  changelog.md  index.md
docs/api-reference/: aad.md  actor.md  auth.md  aws.md  cli.md  client.md  connections.md  di.md  migrate.md  obs.md  progress.md  ratelimit.md  taskq.md  testing.md  vault.md  web.md  worker.md
docs/getting-started/: installation.md  quick-start.md
docs/guides/: actors.md  admin-ui.md  cancellation.md  cli.md  configuration.md  cron.md  dependency-injection.md  deployment.md  jobs-clients.md  managed-identities.md  observability.md  progress.md  rate-limiting.md  retries.md  sso.md  testing.md  troubleshooting.md  tutorial.md  upgrading.md  workers.md  workgroups.md
docs/superpowers/specs/: 2026-07-10-admin-ui-oidc-sso-design.md
examples/: .dockerignore  .env.example  Dockerfile  README.md  admin_app.py  app.py  client_script.py  docker-compose.yml  otel_setup.py  test_example.py  worker.py  workgroup.toml
examples/actors/: __init__.py  advanced.py  basic.py  batch.py  chained.py  di.py  failure.py  progress.py  ratelimit.py  realworld.py  sync_demo.py  tags_demo.py  ticker.py
examples/fastapi_app/: README.md  aad.py  actors.py  main.py  routes.py
examples/templates/: index.html  result.html
scripts/: time_tests.sh
src/taskq/: __init__.py  _dsn.py  _ids.py  _json.py  _scope.py  aad.py  actor.py  auth.py  aws.py  batch.py  cli.py  connections.py  constants.py  context.py  cron.py  di.py  exceptions.py  migrate.py  retry.py  scheduler.py  settings.py  types.py  vault.py
src/taskq/_di/: __init__.py  _utils.py  _validate.py  lifecycle.py  registry.py  scope.py  scopes.py  solver.py  types.py
src/taskq/backend/: __init__.py  _cursor.py  _dispatch.py  _dispatch_sql.py  _enqueue.py  _notify.py  _protocol.py  _reads.py  _records.py  _schedules.py  _sql.py  _sql_templates.py  _sweeps.py  _terminal.py  clock.py  postgres.py  statemachine.py
src/taskq/client/: __init__.py  _args.py  _enqueuer.py  _handle.py  _jobs.py  _taskq.py  _transport.py
src/taskq/contrib/: __init__.py
src/taskq/contrib/kubernetes/: __init__.py  prometheus_rule.yaml
src/taskq/contrib/prometheus/: __init__.py  _metrics.py  rules.yaml
src/taskq/migrations/: 01.00.00_01_pre_initial.sql  01.00.01_01_pre_per_property_cron.sql  __init__.py
src/taskq/obs/: __init__.py  _otel.py  _structlog.py  error_reporter.py
src/taskq/progress/: __init__.py  _buffer.py  _events.py  _flush.py  _publish.py
src/taskq/ratelimit/: __init__.py  _decision_log.py  _provider.py  _redis_utils.py  _scripts.py  _sliding_window_pg.py  _sliding_window_redis.py  composition.py  decision.py  refs.py  registry.py  reservation.py  sliding_window.py  token_bucket.py
src/taskq/testing/: __init__.py  _dispatch.py  _enqueue.py  _reads.py  _runner.py  _slots.py  _sweeps.py  _terminal.py  actor.py  assertions.py  asyncpg_chaos.py  clock.py  fixtures.py  in_memory.py  job_context.py  jobs.py  otel.py  pg.py  settings.py  spy.py
src/taskq/web/: __init__.py  health.py  progress.py
src/taskq/web/admin/: __init__.py  _constants.py  _factory.py  _history.py  _jsonb.py  _listen.py  _static.py  jobs.py  ops.py  queues.py  sse.py  workers.py
src/taskq/web/admin/auth/: __init__.py  _session.py  oidc.py  saml.py  token.py
src/taskq/web/static/: admin.css  admin.js  realtime.js
src/taskq/web/templates/: _base.html  history.html  job_detail.html  jobs.html  leader.html  queue_detail.html  queues.html  rate_limits.html  reservations.html  schedules.html  workers.html
src/taskq/web/templates/_partials/: job_card.html  job_table.html  sse_console.html  table.html
src/taskq/worker/: __init__.py  _bootstrap.py  _consumer.py  _handlers.py  _leader_shared.py  _leader_sweeps.py  actor_config.py  budget.py  cancel.py  cron_loop.py  deps.py  dev.py  dispatch.py  health.py  heartbeat.py  leader.py  notify.py  run.py  shutdown.py  startup.py  workgroup.py
tests/: _sso_oidc_crypto.py  _sso_saml_crypto.py  _worker_harness.py  conftest.py  test_aad.py  test_actor.py  test_actor_config.py  test_actor_config_sync.py  test_actor_runner.py  test_actor_warnings.py  test_admin_security_fixes.py  test_audit_fixes.py  test_auth.py  test_aws.py  test_backend_enqueue_with_conn.py  test_backend_equivalence.py  test_backend_init_coverage.py  test_backend_mark_succeeded.py  test_backend_property.py  test_backend_protocol.py  test_batch.py  test_batch_fast.py  test_batch_unit.py  test_budget.py  test_cancel_hook.py  test_cancel_hook_integration.py  test_cancel_notify_integration.py  test_cancel_obs.py  test_cancel_phase_property.py  test_cancel_registry.py  test_cli_health.py  test_cli_migrate.py  test_cli_ui.py  test_cli_worker.py  test_cli_workgroup.py  test_clock.py  test_connections.py  test_constants.py  test_consumer.py  test_consumer_coverage.py  (+216 more)
tests/compat/: __init__.py  test_retry_exhausted_idempotency_dedup.py  test_stub_broker_migration.py
tests/data/: sliding_window_gcra_reference.lua
tests/fixtures/: __init__.py
tests/perf/: test_dispatch_benchmark.py
tests/web_admin/: __init__.py  conftest.py  test_backend_delegation.py  test_factory.py  test_history.py  test_history_coverage.py  test_jobs.py  test_jsonb_coverage.py  test_listen_coverage.py  test_ops.py  test_ops_mutations.py  test_queues.py  test_realtime_badge.py  test_sse.py  test_templates.py  test_workers.py
tests/web_progress/: test_integration.py  test_unit.py
validation/: tcp_keepalive_partition.md  tcp_keepalive_partition.py
